@@ -697,10 +697,12 @@ Device=/dev/ttyUSB0
 # Port where the LPT is. Common values are 0x278, 0x378 and 0x3BC
 Port=0x378
 
-# Type of LCD module (legal: G321D, G121C, G242C, G191D, G2446)
-# Note: G321D is the only one that is tested currently.
+# Type of LCD module (legal: G321D, G121C, G242C, G191D, G2446, SP14Q002)
+# Note: Currently only tested with G321D & SP14Q002.
 Type=G321D
 
+# Width x Height of a character cell in pixels (legal: 6x7 - 8x16; default: 6x10)
+CellSize=6x10
 
 
 ## Seiko Epson 1520 driver ##
